slettet unødvendig css

--- a/html/billet-shop.html
+++ b/html/billet-shop.html
@@ -16,7 +16,7 @@
 <nav class="navbar">
     <article class="logo">
         <a href="../index.html" title="Til forsiden">
-            <img src="../img/logo/radar-logo.png" alt="Pink Radar logo">
+            <img src="../img/logo/radar-logo.webp" alt="Pink Radar logo">
         </a>
     </article>
     <input type="checkbox" id="menu-toggle" class="menu-checkbox">
@@ -106,7 +106,7 @@
   <article class="køb">
     <h2>150 kr</h2>
     <figure class="plakat">
-    <img src="../img/drawing-guitar.jpg" alt="illustration af en mand med afro der spiller guitar, som er lavet med farverigt lineart">
+    <img src="../img/drawing-guitar.webp" alt="illustration af en mand med afro der spiller guitar, som er lavet med farverigt lineart">
     </figure>  
     <p>Eksklusive Radar plakat</p>
     <button class="kob-billet" onclick="window.location.href='404.html'">KØB BILLET</button>
@@ -115,7 +115,7 @@
   <article class="køb">
     <h2>150 kr</h2>
     <figure class="plakat">
-    <img src="../img/drawing-jazz.jpg" alt="mand der spiller trumpet, tegning">
+    <img src="../img/drawing-jazz.webp" alt="mand der spiller trumpet, tegning">
     </figure>  
     <p>Eksklusive Radar plakat</p>
     <button class="kob-billet" onclick="window.location.href='404.html'">KØB BILLET</button>
@@ -124,7 +124,7 @@
   <article class="køb">
     <h2>150 kr</h2>
     <figure class="plakat">
-      <img src="../img/drawing-drums.jpg" alt="illustration af en mand der spiller trummer, som er lavet med farverigt lineart">
+      <img src="../img/drawing-drums.webp" alt="illustration af en mand der spiller trummer, som er lavet med farverigt lineart">
     </figure>  
     <p>Eksklusive Radar plakat</p>
     <button class="kob-billet" onclick="window.location.href='404.html'">KØB BILLET</button>
@@ -142,7 +142,7 @@
       <div class="footer-logo">
         <figure class="footer-img">
           <a href="../index.html">
-            <img class="radar-logo" src="../img/logo/radar-logo.png" alt="Pink Radar logo">
+            <img class="radar-logo" src="../img/logo/radar-logo.webp" alt="Pink Radar logo">
           </a>
         </figure>
       </div>
