--- a/html/events.html
+++ b/html/events.html
@@ -15,7 +15,7 @@
 <nav class="navbar">
     <article class="logo">
         <a href="../index.html" title="Til forsiden">
-            <img src="../img/logo/radar-logo.png" alt="Pink Radar logo">
+            <img src="../img/logo/radar-logo.webp" alt="Pink Radar logo">
         </a>
     </article>
     <input type="checkbox" id="menu-toggle" class="menu-checkbox">
@@ -32,15 +32,15 @@
 
 <section class="img-banner">
   <figure class="banner-img">
-    <img src="../img/artist-closeup.jpg" alt="billede af sanger tæt på,">
+    <img src="../img/artist-closeup.webp" alt="billede af sanger tæt på,">
   </figure>
 
   <figure class="banner-img">
-    <img src="../img/drawing-guitar.jpg" alt="illustration af en mand med afro der spiller guitar, som er lavet med farverigt lineart">
+    <img src="../img/drawing-guitar.webp" alt="illustration af en mand med afro der spiller guitar, som er lavet med farverigt lineart">
   </figure>
   
   <figure class="banner-img">
-    <img src="../img/red.jpg" alt="billede af puplikum i rød lighting">
+    <img src="../img/red.webp" alt="billede af puplikum i rød lighting">
   </figure>
 </section>
 
@@ -78,20 +78,20 @@
       <!-- 1-7 -->
       <article class="dag">
         <section class="dato">1</section>
-        <img src="../img/logo/rock-logo.png" alt="Koncert" class="begivenhed-ikon">
+        <img src="../img/logo/rock-logo.webp" alt="Koncert" class="begivenhed-ikon">
         <a href="../html/404.html"><section class="begivenhed-info">Flyshow kl. 15:00</section></a>
     </article>
         <article class="dag">2</article>
         <article class="dag">
             <section class="dato">3</section>
-            <img src="../img/logo/hip-hop-logo.png" alt="Koncert" class="begivenhed-ikon">
+            <img src="../img/logo/hip-hop-logo.webp" alt="Koncert" class="begivenhed-ikon">
             <a href="../html/404.html"><section class="begivenhed-info">Flyshow kl. 15:00</section></a>
         </article>
         <article class="dag">4</article>
         <article class="dag">5</article>
         <article class="dag">
             <section class="dato">6</section>
-            <img src="../img/logo/rock-logo.png" alt="Koncert" class="begivenhed-ikon">
+            <img src="../img/logo/rock-logo.webp" alt="Koncert" class="begivenhed-ikon">
             <a href="../html/404.html"><section class="begivenhed-info">Koncert kl. 20:00</section></a>
         </article>
         <article class="dag">7</article>
@@ -100,20 +100,20 @@
         <article class="dag">8</article>
         <article class="dag">
             <section class="dato">9</section>
-            <img src="../img/logo/country-logo.png" alt="Koncert" class="begivenhed-ikon">
+            <img src="../img/logo/country-logo.webp" alt="Koncert" class="begivenhed-ikon">
             <a href="../html/404.html"><section class="begivenhed-info">Flyshow kl. 15:00</section></a>
         </article>
         <article class="dag">10</article>
         <article class="dag">11</article>
         <article class="dag">
           <section class="dato">12</section>
-          <img src="../img/logo/edm-logo.png" alt="Koncert" class="begivenhed-ikon">
+          <img src="../img/logo/edm-logo.webp" alt="Koncert" class="begivenhed-ikon">
           <a href="../html/404.html"><section class="begivenhed-info">Koncert kl. 20:00</section></a>
         </article>
         <article class="dag"><section class="dato">13</section></article>
         <article class="dag">
           <section class="dato">14</section>
-          <img src="../img/logo/jazz-logo.png" alt="Koncert" class="begivenhed-ikon">
+          <img src="../img/logo/jazz-logo.webp" alt="Koncert" class="begivenhed-ikon">
           <a href="../html/404.html"><section class="begivenhed-info">Koncert kl. 20:00</section></a>
         </article>
 
@@ -121,13 +121,13 @@
         <article class="dag">15</article>
         <article class="dag">
             <section class="dato">16</section>
-            <img src="../img/logo/hip-hop-logo.png" alt="Koncert" class="begivenhed-ikon">
+            <img src="../img/logo/hip-hop-logo.webp" alt="Koncert" class="begivenhed-ikon">
             <a href="../html/404.html"><section class="begivenhed-info">Flyshow kl. 15:00</section></a>
         </article>
         <article class="dag">17</article>
         <article class="dag">
           <section class="dato">18</section>
-          <img src="../img/logo/klassisk-logo.png" alt="Koncert" class="begivenhed-ikon">
+          <img src="../img/logo/klassisk-logo.webp" alt="Koncert" class="begivenhed-ikon">
           <a href="../html/404.html"><section class="begivenhed-info">Koncert kl. 20:00</section></a>
         </article>
         <article class="dag">19</article>
@@ -137,24 +137,24 @@
         <!-- 22 - 28 -->
         <article class="dag">
           <section class="dato">22</section>
-          <img src="../img/logo/pop-logo.png" alt="Koncert" class="begivenhed-ikon">
+          <img src="../img/logo/pop-logo.webp" alt="Koncert" class="begivenhed-ikon">
           <a href="../html/404.html"><section class="begivenhed-info">Flyshow kl. 15:00</section></a>
         </article>
         <article class="dag"><section class="dato">23</section></article>
         <article class="dag">
           <section class="dato">24</section>
-          <img src="../img/logo/hip-hop-logo.png" alt="Koncert" class="begivenhed-ikon">
+          <img src="../img/logo/hip-hop-logo.webp" alt="Koncert" class="begivenhed-ikon">
           <a href="../html/404.html"><section class="begivenhed-info">Flyshow kl. 15:00</section></a>
         </article>
         <article class="dag">25</article>
         <article class="dag">
           <section class="dato">26</section>
-          <img src="../img/logo/edm-logo.png" alt="Koncert" class="begivenhed-ikon">
+          <img src="../img/logo/edm-logo.webp" alt="Koncert" class="begivenhed-ikon">
           <a href="../html/404.html"><section class="begivenhed-info">Koncert kl. 20:00</section></a>
         </article>
         <article class="dag">
             <section class="dato">27</section>
-            <img src="../img/logo/rock-logo.png" alt="Koncert" class="begivenhed-ikon">
+            <img src="../img/logo/rock-logo.webp" alt="Koncert" class="begivenhed-ikon">
             <a href="../html/404.html"><section class="begivenhed-info">Koncert kl. 20:00</section></a>
         </article>
         <article class="dag">28</article>
@@ -164,7 +164,7 @@
         <article class="dag">30</article>
         <article class="dag">
             <section class="dato">31</section>
-            <img src="../img/logo/hip-hop-logo.png" alt="Koncert" class="begivenhed-ikon">
+            <img src="../img/logo/hip-hop-logo.webp" alt="Koncert" class="begivenhed-ikon">
             <a href="../html/404.html"><section class="begivenhed-info">Flyshow kl. 15:00</section></a>
         </article>
         <article class="dag"></article>
@@ -190,27 +190,27 @@
 
 <section class="koncerter">
   <figure class="koncert-img">
-    <img src="../img/artist-playing.jpg" alt="koncert helt tæt på artisterne">
+    <img src="../img/artist-playing.webp" alt="koncert helt tæt på artisterne">
   </figure>
 
   <figure class="koncert-img">
-    <img src="../img/red.jpg" alt="billede af puplikum i rød lighting">
+    <img src="../img/red.webp" alt="billede af puplikum i rød lighting">
   </figure>
 
   <figure class="koncert-img">
-    <img src="../img/drawing-drums.jpg" alt="illustration af en mand med der spiller trummer, som er lavet med farverigt lineart">
+    <img src="../img/drawing-drums.webp" alt="illustration af en mand med der spiller trummer, som er lavet med farverigt lineart">
   </figure>
 
   <figure class="koncert-img">
-    <img src="../img/drawing-guitar.jpg" alt="illustration af en mand med afro der spiller guitar, som er lavet med farverigt lineart">
+    <img src="../img/drawing-guitar.webp" alt="illustration af en mand med afro der spiller guitar, som er lavet med farverigt lineart">
   </figure>
 
   <figure class="koncert-img">
-    <img src="../img/rock-hands.jpg" alt="koncert med puplikum der laver rock-hands">
+    <img src="../img/rock-hands.webp" alt="koncert med puplikum der laver rock-hands">
   </figure>
 
   <figure class="koncert-img">
-    <img src="../img/artist-closeup.jpg" alt="billede af sanger tæt på,">
+    <img src="../img/artist-closeup.webp" alt="billede af sanger tæt på,">
   </figure>
 </section>
 
@@ -224,7 +224,7 @@
       <div class="footer-logo">
         <figure class="footer-img">
           <a href="../index.html">
-            <img class="radar-logo" src="../img/logo/radar-logo.png" alt="Pink Radar logo">
+            <img class="radar-logo" src="../img/logo/radar-logo.webp" alt="Pink Radar logo">
           </a>
         </figure>
       </div>
