--- a/html/medlem.html
+++ b/html/medlem.html
@@ -16,7 +16,7 @@
 <nav class="navbar">
     <article class="logo">
         <a href="../index.html" title="Til forsiden">
-            <img src="../img/logo/radar-logo.png" alt="Pink Radar logo">
+            <img src="../img/logo/radar-logo.webp" alt="Pink Radar logo">
         </a>
     </article>
     <input type="checkbox" id="menu-toggle" class="menu-checkbox">
@@ -132,7 +132,7 @@
       <div class="footer-logo">
         <figure class="footer-img">
           <a href="../index.html">
-            <img class="radar-logo" src="../img/logo/radar-logo.png" alt="Pink Radar logo">
+            <img class="radar-logo" src="../img/logo/radar-logo.webp" alt="Pink Radar logo">
           </a>
         </figure>
       </div>
