--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <nav class="navbar">
     <article class="logo">
         <a href="index.html" title="Til forsiden">
-            <img src="../img/logo/radar-logo.png" alt="Pink Radar logo">
+            <img src="../img/logo/radar-logo.webp" alt="Pink Radar logo">
         </a>
     </article>
     <input type="checkbox" id="menu-toggle" class="menu-checkbox">
@@ -36,15 +36,15 @@
 
 <section class="img-banner">
   <figure class="banner-img">
-    <img src="img/rock-hands.jpg" alt="band som spiller, med puplikum der laver rock-hands">
+    <img src="img/rock-hands.webp" alt="band som spiller, med puplikum der laver rock-hands">
   </figure>
 
   <figure class="banner-img">
-    <img src="img/red.jpg" alt="billede af puplikum i rød lighting">
+    <img src="img/red.webp" alt="billede af puplikum i rød lighting">
   </figure>
   
   <figure class="banner-img">
-    <img src="img/artist-playing.jpg" alt="billede af sangeren med puplikum i forgrunden">
+    <img src="img/artist-playing.webp" alt="billede af sangeren med puplikum i forgrunden">
   </figure>
 </section>
 
@@ -63,7 +63,7 @@
   <article class="box">
     <figure>
       <a href="../html/events.html">
-    <img src="img/logo/udraabstegn-logo.png" alt="udraabstegn" class="icon" />
+    <img src="img/logo/udraabstegn-logo.webp" alt="udraabstegn" class="icon" />
       </a>
   </figure>
     <h3>Events</h3>
@@ -77,7 +77,7 @@
   <article class="box">
     <figure>
       <a href="../html/info.html">
-    <img src="img/logo/sporgsmaal-logo.png" alt="sporgsmaalstegn" class="icon" />
+    <img src="img/logo/sporgsmaal-logo.webp" alt="sporgsmaalstegn" class="icon" />
       </a>
     </figure>
     <h3>Information</h3>
@@ -91,7 +91,7 @@
   <article class="box">
     <figure>
       <a href="../html/billet-shop.html">
-    <img src="img/logo/node-logo.png" alt="musiknode" class="icon" />
+    <img src="img/logo/node-logo.webp" alt="musiknode" class="icon" />
       </a>
     </figure>
     <h3>Billet/Shop</h3>
@@ -114,7 +114,7 @@
       <div class="footer-logo">
         <figure class="footer-img">
           <a href="index.html">
-            <img class="radar-logo" src="img/logo/radar-logo.png" alt="Pink Radar logo">
+            <img class="radar-logo" src="img/logo/radar-logo.webp" alt="Pink Radar logo">
           </a>
         </figure>
       </div>
